apps/karakeep/meilisearch-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meilisearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meilisearch
  template:
    metadata:
      labels:
        app: meilisearch
    spec:
      containers:
        - name: meilisearch
          image: getmeili/meilisearch:v1.27.0
          volumeMounts:
            - name: meilisearch
              mountPath: /meili_data
              subPath: karakeep/meilisearch
      volumes:
        - name: meilisearch
          persistentVolumeClaim:
            claimName: karakeep-pvc
