apps/karakeep/web-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: karakeep-web
  template:
    metadata:
      labels:
        app: karakeep-web
      annotations:
        io.containerd.runc.v2.group: "zeropod"
        zeropod.ctrox.dev/container-names: "web"
        zeropod.ctrox.dev/ports-map: "web=3000"
        zeropod.ctrox.dev/scaledown-duration: 10s
    spec:
      runtimeClassName: zeropod
      containers:
        - name: web
          image: ghcr.io/karakeep-app/karakeep:0.29.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /data
              subPath: karakeep/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: karakeep-pvc
