apps/karakeep/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karakeep-web-ingress
  annotations:
    traefik.ingress.k8s.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  rules:
    - host: karakeep.veirt.web.id
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: karakeep-web-service
                port:
                  number: 3000
  tls:
    - hosts:
        - karakeep.veirt.web.id
      secretName: karakeep-tls
